seaqt/QtWidgets/gen_qspinbox.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QDoubleSpinBox QDoubleSpinBox;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QSpinBox QSpinBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWidget QWidget;
bool QSpinBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
bool QSpinBox_override_virtual_enterEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QSpinBox_override_virtual_leaveEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_leaveEvent(void* self, QEvent* event);
bool QSpinBox_override_virtual_moveEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QSpinBox_override_virtual_tabletEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QSpinBox_override_virtual_actionEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QSpinBox_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QSpinBox_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QSpinBox_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QSpinBox_override_virtual_dropEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QSpinBox_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QSpinBox_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QSpinBox_override_virtual_metric(void* self, intptr_t slot);
int QSpinBox_virtualbase_metric(const void* self, int param1);
bool QSpinBox_override_virtual_initPainter(void* self, intptr_t slot);
void QSpinBox_virtualbase_initPainter(const void* self, QPainter* painter);
bool QSpinBox_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QSpinBox_virtualbase_redirected(const void* self, QPoint* offset);
bool QSpinBox_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QSpinBox_virtualbase_sharedPainter(const void* self);
bool QSpinBox_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QSpinBox_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QSpinBox_virtualbase_focusNextPrevChild(void* self, bool next);
bool QSpinBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSpinBox_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSpinBox_override_virtual_childEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSpinBox_override_virtual_customEvent(void* self, intptr_t slot);
void QSpinBox_virtualbase_customEvent(void* self, QEvent* event);
bool QSpinBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QSpinBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSpinBox_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSpinBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QSpinBox_staticMetaObject();
void QSpinBox_delete(QSpinBox* self);
QDoubleSpinBox* QDoubleSpinBox_new(QWidget* parent);
QDoubleSpinBox* QDoubleSpinBox_new2();
QMetaObject* QDoubleSpinBox_metaObject(const QDoubleSpinBox* self);
void* QDoubleSpinBox_metacast(QDoubleSpinBox* self, const char* param1);
int QDoubleSpinBox_metacall(QDoubleSpinBox* self, int param1, int param2, void** param3);
struct miqt_string QDoubleSpinBox_tr(const char* s);
double QDoubleSpinBox_value(const QDoubleSpinBox* self);
struct miqt_string QDoubleSpinBox_prefix(const QDoubleSpinBox* self);
void QDoubleSpinBox_setPrefix(QDoubleSpinBox* self, struct miqt_string prefix);
struct miqt_string QDoubleSpinBox_suffix(const QDoubleSpinBox* self);
void QDoubleSpinBox_setSuffix(QDoubleSpinBox* self, struct miqt_string suffix);
struct miqt_string QDoubleSpinBox_cleanText(const QDoubleSpinBox* self);
double QDoubleSpinBox_singleStep(const QDoubleSpinBox* self);
void QDoubleSpinBox_setSingleStep(QDoubleSpinBox* self, double val);
double QDoubleSpinBox_minimum(const QDoubleSpinBox* self);
void QDoubleSpinBox_setMinimum(QDoubleSpinBox* self, double min);
double QDoubleSpinBox_maximum(const QDoubleSpinBox* self);
void QDoubleSpinBox_setMaximum(QDoubleSpinBox* self, double max);
void QDoubleSpinBox_setRange(QDoubleSpinBox* self, double min, double max);
int QDoubleSpinBox_stepType(const QDoubleSpinBox* self);
void QDoubleSpinBox_setStepType(QDoubleSpinBox* self, int stepType);
int QDoubleSpinBox_decimals(const QDoubleSpinBox* self);
void QDoubleSpinBox_setDecimals(QDoubleSpinBox* self, int prec);
int QDoubleSpinBox_validate(const QDoubleSpinBox* self, struct miqt_string input, int* pos);
double QDoubleSpinBox_valueFromText(const QDoubleSpinBox* self, struct miqt_string text);
struct miqt_string QDoubleSpinBox_textFromValue(const QDoubleSpinBox* self, double val);
void QDoubleSpinBox_fixup(const QDoubleSpinBox* self, struct miqt_string str);
void QDoubleSpinBox_setValue(QDoubleSpinBox* self, double val);
void QDoubleSpinBox_valueChanged(QDoubleSpinBox* self, double param1);
void QDoubleSpinBox_connect_valueChanged(QDoubleSpinBox* self, intptr_t slot);
void QDoubleSpinBox_textChanged(QDoubleSpinBox* self, struct miqt_string param1);
void QDoubleSpinBox_connect_textChanged(QDoubleSpinBox* self, intptr_t slot);
struct miqt_string QDoubleSpinBox_tr2(const char* s, const char* c);
struct miqt_string QDoubleSpinBox_tr3(const char* s, const char* c, int n);
bool QDoubleSpinBox_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QDoubleSpinBox_virtualbase_metaObject(const void* self);
bool QDoubleSpinBox_override_virtual_metacast(void* self, intptr_t slot);
void* QDoubleSpinBox_virtualbase_metacast(void* self, const char* param1);
bool QDoubleSpinBox_override_virtual_metacall(void* self, intptr_t slot);
int QDoubleSpinBox_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QDoubleSpinBox_override_virtual_validate(void* self, intptr_t slot);
int QDoubleSpinBox_virtualbase_validate(const void* self, struct miqt_string input, int* pos);
bool QDoubleSpinBox_override_virtual_valueFromText(void* self, intptr_t slot);
double QDoubleSpinBox_virtualbase_valueFromText(const void* self, struct miqt_string text);
bool QDoubleSpinBox_override_virtual_textFromValue(void* self, intptr_t slot);
struct miqt_string QDoubleSpinBox_virtualbase_textFromValue(const void* self, double val);
bool QDoubleSpinBox_override_virtual_fixup(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_fixup(const void* self, struct miqt_string str);
bool QDoubleSpinBox_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QDoubleSpinBox_virtualbase_sizeHint(const void* self);
bool QDoubleSpinBox_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QDoubleSpinBox_virtualbase_minimumSizeHint(const void* self);
bool QDoubleSpinBox_virtualbase_event(void* self, QEvent* event);