seaqt/QtWidgets/gen_qspinbox.nim

proc fcQSpinBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_mouseDoubleClickEvent".}
proc fQSpinBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_enterEvent".}
proc fcQSpinBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_enterEvent".}
proc fQSpinBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_leaveEvent".}
proc fcQSpinBox_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_leaveEvent".}
proc fQSpinBox_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_moveEvent".}
proc fcQSpinBox_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_moveEvent".}
proc fQSpinBox_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_tabletEvent".}
proc fcQSpinBox_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_tabletEvent".}
proc fQSpinBox_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_actionEvent".}
proc fcQSpinBox_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_actionEvent".}
proc fQSpinBox_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_dragEnterEvent".}
proc fcQSpinBox_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_dragEnterEvent".}
proc fQSpinBox_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_dragMoveEvent".}
proc fcQSpinBox_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_dragMoveEvent".}
proc fQSpinBox_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_dragLeaveEvent".}
proc fcQSpinBox_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_dragLeaveEvent".}
proc fQSpinBox_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_dropEvent".}
proc fcQSpinBox_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_dropEvent".}
proc fQSpinBox_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QSpinBox_virtualbase_nativeEvent".}
proc fcQSpinBox_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_nativeEvent".}
proc fQSpinBox_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QSpinBox_virtualbase_metric".}
proc fcQSpinBox_override_virtual_metric(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_metric".}
proc fQSpinBox_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QSpinBox_virtualbase_initPainter".}
proc fcQSpinBox_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_initPainter".}
proc fQSpinBox_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QSpinBox_virtualbase_redirected".}
proc fcQSpinBox_override_virtual_redirected(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_redirected".}
proc fQSpinBox_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QSpinBox_virtualbase_sharedPainter".}
proc fcQSpinBox_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_sharedPainter".}
proc fQSpinBox_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QSpinBox_virtualbase_inputMethodEvent".}
proc fcQSpinBox_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_inputMethodEvent".}
proc fQSpinBox_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QSpinBox_virtualbase_focusNextPrevChild".}
proc fcQSpinBox_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_focusNextPrevChild".}
proc fQSpinBox_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSpinBox_virtualbase_eventFilter".}
proc fcQSpinBox_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_eventFilter".}
proc fQSpinBox_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_childEvent".}
proc fcQSpinBox_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_childEvent".}
proc fQSpinBox_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSpinBox_virtualbase_customEvent".}
proc fcQSpinBox_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_customEvent".}
proc fQSpinBox_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSpinBox_virtualbase_connectNotify".}
proc fcQSpinBox_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_connectNotify".}
proc fQSpinBox_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSpinBox_virtualbase_disconnectNotify".}
proc fcQSpinBox_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSpinBox_override_virtual_disconnectNotify".}
proc fcQSpinBox_staticMetaObject(): pointer {.importc: "QSpinBox_staticMetaObject".}
proc fcQSpinBox_delete(self: pointer) {.importc: "QSpinBox_delete".}
proc fcQDoubleSpinBox_new(parent: pointer): ptr cQDoubleSpinBox {.importc: "QDoubleSpinBox_new".}
proc fcQDoubleSpinBox_new2(): ptr cQDoubleSpinBox {.importc: "QDoubleSpinBox_new2".}
proc fcQDoubleSpinBox_metaObject(self: pointer, ): pointer {.importc: "QDoubleSpinBox_metaObject".}
proc fcQDoubleSpinBox_metacast(self: pointer, param1: cstring): pointer {.importc: "QDoubleSpinBox_metacast".}
proc fcQDoubleSpinBox_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QDoubleSpinBox_metacall".}
proc fcQDoubleSpinBox_tr(s: cstring): struct_miqt_string {.importc: "QDoubleSpinBox_tr".}
proc fcQDoubleSpinBox_value(self: pointer, ): float64 {.importc: "QDoubleSpinBox_value".}
proc fcQDoubleSpinBox_prefix(self: pointer, ): struct_miqt_string {.importc: "QDoubleSpinBox_prefix".}
proc fcQDoubleSpinBox_setPrefix(self: pointer, prefix: struct_miqt_string): void {.importc: "QDoubleSpinBox_setPrefix".}
proc fcQDoubleSpinBox_suffix(self: pointer, ): struct_miqt_string {.importc: "QDoubleSpinBox_suffix".}
proc fcQDoubleSpinBox_setSuffix(self: pointer, suffix: struct_miqt_string): void {.importc: "QDoubleSpinBox_setSuffix".}
proc fcQDoubleSpinBox_cleanText(self: pointer, ): struct_miqt_string {.importc: "QDoubleSpinBox_cleanText".}
proc fcQDoubleSpinBox_singleStep(self: pointer, ): float64 {.importc: "QDoubleSpinBox_singleStep".}
proc fcQDoubleSpinBox_setSingleStep(self: pointer, val: float64): void {.importc: "QDoubleSpinBox_setSingleStep".}
proc fcQDoubleSpinBox_minimum(self: pointer, ): float64 {.importc: "QDoubleSpinBox_minimum".}
proc fcQDoubleSpinBox_setMinimum(self: pointer, min: float64): void {.importc: "QDoubleSpinBox_setMinimum".}
proc fcQDoubleSpinBox_maximum(self: pointer, ): float64 {.importc: "QDoubleSpinBox_maximum".}
proc fcQDoubleSpinBox_setMaximum(self: pointer, max: float64): void {.importc: "QDoubleSpinBox_setMaximum".}
proc fcQDoubleSpinBox_setRange(self: pointer, min: float64, max: float64): void {.importc: "QDoubleSpinBox_setRange".}
proc fcQDoubleSpinBox_stepType(self: pointer, ): cint {.importc: "QDoubleSpinBox_stepType".}
proc fcQDoubleSpinBox_setStepType(self: pointer, stepType: cint): void {.importc: "QDoubleSpinBox_setStepType".}
proc fcQDoubleSpinBox_decimals(self: pointer, ): cint {.importc: "QDoubleSpinBox_decimals".}
proc fcQDoubleSpinBox_setDecimals(self: pointer, prec: cint): void {.importc: "QDoubleSpinBox_setDecimals".}
proc fcQDoubleSpinBox_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint {.importc: "QDoubleSpinBox_validate".}
proc fcQDoubleSpinBox_valueFromText(self: pointer, text: struct_miqt_string): float64 {.importc: "QDoubleSpinBox_valueFromText".}
proc fcQDoubleSpinBox_textFromValue(self: pointer, val: float64): struct_miqt_string {.importc: "QDoubleSpinBox_textFromValue".}
proc fcQDoubleSpinBox_fixup(self: pointer, str: struct_miqt_string): void {.importc: "QDoubleSpinBox_fixup".}
proc fcQDoubleSpinBox_setValue(self: pointer, val: float64): void {.importc: "QDoubleSpinBox_setValue".}
proc fcQDoubleSpinBox_valueChanged(self: pointer, param1: float64): void {.importc: "QDoubleSpinBox_valueChanged".}
proc fcQDoubleSpinBox_connect_valueChanged(self: pointer, slot: int) {.importc: "QDoubleSpinBox_connect_valueChanged".}
proc fcQDoubleSpinBox_textChanged(self: pointer, param1: struct_miqt_string): void {.importc: "QDoubleSpinBox_textChanged".}
proc fcQDoubleSpinBox_connect_textChanged(self: pointer, slot: int) {.importc: "QDoubleSpinBox_connect_textChanged".}
proc fcQDoubleSpinBox_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QDoubleSpinBox_tr2".}
proc fcQDoubleSpinBox_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QDoubleSpinBox_tr3".}
proc fQDoubleSpinBox_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QDoubleSpinBox_virtualbase_metaObject".}
proc fcQDoubleSpinBox_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_metaObject".}
proc fQDoubleSpinBox_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QDoubleSpinBox_virtualbase_metacast".}
proc fcQDoubleSpinBox_override_virtual_metacast(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_metacast".}
proc fQDoubleSpinBox_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QDoubleSpinBox_virtualbase_metacall".}
proc fcQDoubleSpinBox_override_virtual_metacall(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_metacall".}
proc fQDoubleSpinBox_virtualbase_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint{.importc: "QDoubleSpinBox_virtualbase_validate".}
proc fcQDoubleSpinBox_override_virtual_validate(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_validate".}
proc fQDoubleSpinBox_virtualbase_valueFromText(self: pointer, text: struct_miqt_string): float64{.importc: "QDoubleSpinBox_virtualbase_valueFromText".}
proc fcQDoubleSpinBox_override_virtual_valueFromText(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_valueFromText".}
proc fQDoubleSpinBox_virtualbase_textFromValue(self: pointer, val: float64): struct_miqt_string{.importc: "QDoubleSpinBox_virtualbase_textFromValue".}
proc fcQDoubleSpinBox_override_virtual_textFromValue(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_textFromValue".}
proc fQDoubleSpinBox_virtualbase_fixup(self: pointer, str: struct_miqt_string): void{.importc: "QDoubleSpinBox_virtualbase_fixup".}
proc fcQDoubleSpinBox_override_virtual_fixup(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_fixup".}
proc fQDoubleSpinBox_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QDoubleSpinBox_virtualbase_sizeHint".}
proc fcQDoubleSpinBox_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_sizeHint".}
proc fQDoubleSpinBox_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QDoubleSpinBox_virtualbase_minimumSizeHint".}
proc fcQDoubleSpinBox_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_minimumSizeHint".}
proc fQDoubleSpinBox_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QDoubleSpinBox_virtualbase_event".}
